ok even more java varargs nonsense